crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__all_samples@op_precedence__bit_math.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: parsed
input_file: samples/as2_pcode/op_precedence/bit_math.pcode
---
Ok:
  actions:
    - ConstantPool:
        - a
        - b
        - c
        - a=
        - ", b="
        - ", c="
        - "----"
        - "a & b = "
        - "a & b & c = "
        - "((a & b) & c) = "
        - "---"
        - "a ^ b = "
        - "a ^ b ^ c = "
        - "((a ^ b) ^ c) = "
        - "a | b = "
        - "a | b | c = "
        - "((a | b) | c) = "
        - "a & b ^ c = "
        - "((a & b) ^ c) = "
        - "a ^ b | c = "
        - "((a ^ b) | c) = "
    - Push:
        - Constant: 0
    - Push:
        - Integer: 12
    - DefineLocal
    - Push:
        - Constant: 1
    - Push:
        - Integer: 5
    - DefineLocal
    - Push:
        - Constant: 2
    - Push:
        - Integer: 3
    - DefineLocal
    - Push:
        - Constant: 3
    - Push:
        - Constant: 0
    - GetVariable
    - Add2
    - Push:
        - Constant: 4
    - Add2
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Push:
        - Constant: 5
    - Add2
    - Push:
        - Constant: 2
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 6
    - Trace
    - Push:
        - Constant: 7
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitAnd
    - Add2
    - Trace
    - Push:
        - Constant: 8
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitAnd
    - Push:
        - Constant: 2
    - GetVariable
    - BitAnd
    - Add2
    - Trace
    - Push:
        - Constant: 9
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitAnd
    - Push:
        - Constant: 2
    - GetVariable
    - BitAnd
    - Add2
    - Trace
    - Push:
        - Constant: 10
    - Trace
    - Push:
        - Constant: 11
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitXor
    - Add2
    - Trace
    - Push:
        - Constant: 12
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitXor
    - Push:
        - Constant: 2
    - GetVariable
    - BitXor
    - Add2
    - Trace
    - Push:
        - Constant: 13
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitXor
    - Push:
        - Constant: 2
    - GetVariable
    - BitXor
    - Add2
    - Trace
    - Push:
        - Constant: 10
    - Trace
    - Push:
        - Constant: 14
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitOr
    - Add2
    - Trace
    - Push:
        - Constant: 15
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitOr
    - Push:
        - Constant: 2
    - GetVariable
    - BitOr
    - Add2
    - Trace
    - Push:
        - Constant: 16
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitOr
    - Push:
        - Constant: 2
    - GetVariable
    - BitOr
    - Add2
    - Trace
    - Push:
        - Constant: 10
    - Trace
    - Push:
        - Constant: 17
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitAnd
    - Push:
        - Constant: 2
    - GetVariable
    - BitXor
    - Add2
    - Trace
    - Push:
        - Constant: 18
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitAnd
    - Push:
        - Constant: 2
    - GetVariable
    - BitXor
    - Add2
    - Trace
    - Push:
        - Constant: 10
    - Trace
    - Push:
        - Constant: 19
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitXor
    - Push:
        - Constant: 2
    - GetVariable
    - BitOr
    - Add2
    - Trace
    - Push:
        - Constant: 20
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitXor
    - Push:
        - Constant: 2
    - GetVariable
    - BitOr
    - Add2
    - Trace
  label_positions: {}
