crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__all_samples@op_precedence__equality.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: parsed
input_file: samples/as2_pcode/op_precedence/equality.pcode
---
Ok:
  actions:
    - ConstantPool:
        - a
        - b
        - "10"
        - c
        - a=
        - ", b="
        - ", c="
        - "----"
        - "a == b = "
        - "a != b = "
        - "---"
        - "a === b = "
        - "a !== b = "
        - "a == b == c = "
        - "((a == b) == c) = "
        - "a !== b !== c = "
        - "((a !== b) !== c) = "
        - "a == b > c = "
        - "(a == (b > c)) = "
    - Push:
        - Constant: 0
    - Push:
        - Integer: 10
    - DefineLocal
    - Push:
        - Constant: 1
    - Push:
        - Constant: 2
    - DefineLocal
    - Push:
        - Constant: 3
    - Push:
        - Integer: 5
    - DefineLocal
    - Push:
        - Constant: 4
    - Push:
        - Constant: 0
    - GetVariable
    - Add2
    - Push:
        - Constant: 5
    - Add2
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Push:
        - Constant: 6
    - Add2
    - Push:
        - Constant: 3
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 7
    - Trace
    - Push:
        - Constant: 8
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Equals2
    - Add2
    - Trace
    - Push:
        - Constant: 9
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Equals2
    - Not
    - Add2
    - Trace
    - Push:
        - Constant: 10
    - Trace
    - Push:
        - Constant: 11
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - StrictEquals
    - Add2
    - Trace
    - Push:
        - Constant: 12
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - StrictEquals
    - Not
    - Add2
    - Trace
    - Push:
        - Constant: 10
    - Trace
    - Push:
        - Constant: 13
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Equals2
    - Push:
        - Constant: 3
    - GetVariable
    - Equals2
    - Add2
    - Trace
    - Push:
        - Constant: 14
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Equals2
    - Push:
        - Constant: 3
    - GetVariable
    - Equals2
    - Add2
    - Trace
    - Push:
        - Constant: 15
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - StrictEquals
    - Not
    - Push:
        - Constant: 3
    - GetVariable
    - StrictEquals
    - Not
    - Add2
    - Trace
    - Push:
        - Constant: 16
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - StrictEquals
    - Not
    - Push:
        - Constant: 3
    - GetVariable
    - StrictEquals
    - Not
    - Add2
    - Trace
    - Push:
        - Constant: 10
    - Trace
    - Push:
        - Constant: 17
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 3
    - GetVariable
    - Greater
    - Equals2
    - Add2
    - Trace
    - Push:
        - Constant: 18
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 3
    - GetVariable
    - Greater
    - Equals2
    - Add2
    - Trace
  label_positions: {}
